@@ -1,3 +1,8 @@
+02-16-19 : Immunity to +1/+2/+3 no longer have any effect in the game. 
+           Immunity to non-magic is still circumvented by magic weapons. Also,
+           the enhance weapon spell no longer makes weapons glow. 
+           Thieves Rejoice!
+
 11-29-18 : Class Quest rewards have been updated.
            Monk sashes, deikhan swords/shield, and Shaman masks are now much
            more worthwhile.
